add applicationError and relatd api example
